[package]
name = "echonet-lite-rs"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_repr = "0.1"
bare-io = "0.2"
byteorder = { version = "1.4", default-features = false }
