[package]
name = "echonet-lite-rs"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_repr = "0.1"
bare-io = "0.2"
phf = { version = "0.9", features = ["macros"] }
