[package]
name = "echonet-lite"
version = "0.1.1"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Pure Rust ECHONET Lite implementation"
keywords = ["no-std", "echonet-lite"]
categories = ["Embedded development", "Encoding"]
repository = "https://github.com/tomoyuki-nakabayashi/echonet-lite-rs"
readme = "README.md"
documentation = "https://docs.rs/crate/echonet-lite/"
edition = "2018"

[dependencies]
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_repr = "0.1"
core2 = "0.4"
phf = { version = "0.9", features = ["macros"] }

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]
